Chapter04/circuit_breaker/envoy-proxy.yaml
static_resources:
  listeners:
    - name: example_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: example_filter
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: example_route
                  virtual_hosts:
                    - name: example_service
                      domains: [ "*" ]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: example_cluster
                            host_rewrite_literal: www.duckduckgo.com
                            retry_policy:
                              retry_on: "5xx"
                              num_retries: 3
                              per_try_timeout: 2s
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: example_cluster
      connect_timeout: 30s
      type: logical_dns
      dns_lookup_family: v4_only
      lb_policy: round_robin
      load_assignment:
        cluster_name: example_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: www.duckduckgo.com
                      port_value: 443
      transport_socket:
        name: example_tls_socket
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: www.duckduckgo.com
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 1000
            max_requests: 1000
            max_pending_requests: 1000
